--- a/project/finalproject1.html
+++ b/project/finalproject1.html
@@ -38,6 +38,7 @@
 		top:50%;
 		transform:translateY(-50%);
 		position:relative;
+		background:orange;
 	}
 
 	nav{
@@ -69,7 +70,6 @@
 		width:85%;
 	}
 
-	/* inner elements*/
 	header.secondary{
 		height:90px;
 		margin-bottom:1.5%;
@@ -83,10 +83,15 @@
 	section.secondary{
 		width:57.5%;
 		margin-right:2.5%;
+		background: orange;
 	}
 
-	aside.secondary{
+	aside .secondary{
 		width:40%;
+	}
+
+	#trumppic{
+		background: url('../practice/trump1.png');
 	}
 
 	#boxes{
@@ -129,7 +134,8 @@
 			<h1>HEADER</h1>
 		</header>
 
-		<section class="secondary visible float">
+		<section id="trumppic" class="secondary visible float">
+
 			<h1>TRUMP PIC</h1>
 		</section>
 
